load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "capture",
    srcs = [
        "buffer.go",
        "middleware.go",
    ],
    importpath = "github.com/magma/magma/src/go/capture",
    visibility = ["//visibility:public"],
    deps = [
        "//src/go/agwd/config",
        "//src/go/protos/magma/capture",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)

go_test(
    name = "capture_test",
    size = "small",
    srcs = [
        "buffer_test.go",
        "middleware_test.go",
    ],
    embed = [":capture"],
    deps = [
        "//src/go/agwd/config",
        "//src/go/agwd/config/mock_config",
        "//src/go/protos/magma/capture",
        "//src/go/protos/magma/config",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
    ],
)
