load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crash",
    srcs = ["crash.go"],
    importpath = "github.com/magma/magma/src/go/crash",
    visibility = ["//visibility:public"],
)

go_test(
    name = "crash_test",
    size = "small",
    srcs = ["crash_test.go"],
    deps = [
        ":crash",
        "//src/go/crash/mock_crash",
        "@com_github_golang_mock//gomock",
        "@com_github_pkg_errors//:errors",
        "@com_github_stretchr_testify//assert",
    ],
)
