load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "subscriberdb",
    srcs = ["subscriberdb.go"],
    importpath = "github.com/magma/magma/src/go/subscriberdb",
    visibility = ["//visibility:public"],
    deps = [
        "//src/go/protos/magma/subscriberdb",
        "@com_github_gomodule_redigo//redis",
    ],
)
