load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "trace",
    srcs = ["trace.go"],
    importpath = "github.com/magma/magma/src/go/trace",
    visibility = ["//visibility:public"],
)

go_test(
    name = "trace_test",
    srcs = [
        "mock_trace_test.go",
        "trace_test.go",
    ],
    embed = [":trace"],
    deps = ["@com_github_golang_mock//gomock"],
)
